--- a/loginbus_services.html
+++ b/loginbus_services.html
@@ -22,14 +22,14 @@
       <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="bus_services.html">Bus</a></li>
+        <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
         <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="bus_services.html">Bus</a></li>
+        <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
@@ -37,15 +37,15 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
+      <a href="loginindexpage.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
+            <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.php">Log In</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
@@ -53,7 +53,7 @@
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
              <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.php">Log In</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
     </div>
   </nav>
@@ -61,30 +61,31 @@
 
   <div class="section white">
     <div class="row container">
-      <h2 class="parallaxheader">Train Services</h2>
-      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the train services work and what you will have to do to use the card correctly when you wish to travel from train stations</p>
+      <h2 class="parallaxheader">Bus Services</h2>
+      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the bus services work and what you will have to do to use the card correctly when you wish to travel on buses.</p>
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="assets/trainpic6.jpeg"></div>
+    <div class="parallax"><img src="assets/buspic5.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner, that will allow you to buy a ticket for the train which you can use to leave and re-enter the station and use to board the train itself. The swypecard will be your secondary ticket and is an important component to making sure you safely book tickets if you use trains on a regular basis.  </p>
+      <p class="grey-text text-darken-3 lighten-3">Buses with our company will be fitted with a card scanner that allows you to easily swipe your card over it to pay for your journey. Since the money is prepaid there is nothing else you have to do other than enjoy your journey as the system will have recognised that you have paid successfully notifying the bus driver.</p>
     </div>
      <div class="parallax-container">
-        <div class="parallax"><img src="assets/trainpic4.jpg"></div>
+        <div class="parallax"><img src="assets/buspic6.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take, however the money will be pre paid for when you use the card to buy the tickets this means that you can easily make impromptu journeys without needing to carry money.</p>
+      <p class="grey-text text-darken-3 lighten-3">Journeys that may require multiple buses will work the same way and you will have to use the card for both journeys. This will count as two payments as you will be using different buses.</p>
     </div>
     <div class="parallax-container">
-    <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
+    <div class="parallax"><img src="assets/buspic7.jpeg"></div>
     </div>
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for any other transportation you wish to take.</p>
+         <p class="grey-text text-darken-3 lighten-3">Swypecard is working with many bus companies around the U.K so there is many methods to get around using the card and many places that you can get to using the service that is provided with the companies we work with.</p>
     </div>
 
-         <footer class="page-footer">
+
+        <footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l12 s12">
