--- a/loginabout.html
+++ b/loginabout.html
@@ -22,14 +22,14 @@
       <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="bus_services.html">Bus</a></li>
+        <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
         <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="bus_services.html">Bus</a></li>
+        <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
@@ -37,18 +37,18 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
+      <a href="loginindexpage.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
+            <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.php">Log In</a></li>
+            <li><a href="log_in.php">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
-             <li><a href="about.html">About</a></li>
+             <li><a href="loginabout.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
@@ -59,32 +59,45 @@
   </nav>
         <!--Navbar End-->
 
+        <div class="parallax-container">
+    <div class="parallax"><img src="assets/HomePicture2.jpg"></div>
+  </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="parallaxheader">Train Services</h2>
-      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the train services work and what you will have to do to use the card correctly when you wish to travel from train stations</p>
+      <h2 class="parallaxheader">About Us</h2>
+      <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible. Our product promotes this to the greatest extent as it will continue to improve and create a smoother experience. Swype card works by using a seperate account that you put money into so that you can use it to easily use public transport.</p>
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="assets/trainpic6.jpeg"></div>
+    <div class="parallax"><img src="assets/train%204.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner, that will allow you to buy a ticket for the train which you can use to leave and re-enter the station and use to board the train itself. The swypecard will be your secondary ticket and is an important component to making sure you safely book tickets if you use trains on a regular basis.  </p>
+      <h2 class="header">The Company and the Product</h2>
+      <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible and our product promotes this to the greatest extent as it will continue to improve and create a smoother experience Swype card works by using a seperate account that you put money into so that you can use it to easily use public transport.</p>
     </div>
      <div class="parallax-container">
-        <div class="parallax"><img src="assets/trainpic4.jpg"></div>
+        <div class="parallax"><img src="assets/buspic4.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take, however the money will be pre paid for when you use the card to buy the tickets this means that you can easily make impromptu journeys without needing to carry money.</p>
+      <h2 class="header">Buses</h2>
+      <p class="grey-text text-darken-3 lighten-3">Bus services are improved with swype card, making boarding and paying for the journey easier and less tedious. With a use of the card you can easily pay for your fare and get to where you need to be with no problem.</p>
     </div>
     <div class="parallax-container">
-    <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
+    <div class="parallax"><img src="assets/trainpic3.jpeg"></div>
     </div>
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for any other transportation you wish to take.</p>
+        <h2 class="header">Trains</h2>
+         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card, as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
+    </div>
+        <div class="parallax-container">
+        <div class="parallax"><img src="assets/taxipic1.jpeg"></div>
+    </div>
+     <div class="row container">
+        <h2 class="header">Taxi</h2>
+            <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectively pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
     </div>
 
-         <footer class="page-footer">
+        <footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l12 s12">
