--- a/loginbus_services.html
+++ b/loginbus_services.html
@@ -24,14 +24,14 @@
    <ul id="dropdown1" class="dropdown-content">
         <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
-        <li><a href="train_services.html">Trains</a></li>
+        <li><a href="logintrain_services.html">Trains</a></li>
         <li class="divider"></li>
         <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
         <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
-        <li><a href="train_services.html">Trains</a></li>
+        <li><a href="logintrain_services.html">Trains</a></li>
         <li class="divider"></li>
         <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
