--- a/loginabout.html
+++ b/loginabout.html
@@ -42,8 +42,8 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a href="booking.html">Book</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="loginbooking.html">Book</a></li>
+            <li><a href="loginfaq.html">FAQ</a></li>
             <li><a href="sign_up.php">Sign Up</a></li>
             <li><a href="log_in.php">Log In</a></li>
       </ul>
