--- a/loginbus_services.html
+++ b/loginbus_services.html
@@ -26,14 +26,14 @@
         <li class="divider"></li>
         <li><a href="logintrain_services.html">Trains</a></li>
         <li class="divider"></li>
-        <li><a href="taxi_services.html">Taxi</a></li>
+        <li><a href="logintaxi_services.html">Taxi</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
         <li><a href="loginbus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="logintrain_services.html">Trains</a></li>
         <li class="divider"></li>
-        <li><a href="taxi_services.html">Taxi</a></li>
+        <li><a href="logintaxi_services.html">Taxi</a></li>
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
@@ -42,16 +42,16 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a href="booking.html">Book</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="loginbooking.html">Book</a></li>
+            <li><a href="loginfaq.html">FAQ</a></li>
             <li><a href="sign_up.php">Sign Up</a></li>
              <li><a href="log_in.html">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
-             <li><a href="booking.html">Book</a></li>
-             <li><a href="faq.html">FAQ</a></li>
+             <li><a href="loginbooking.html">Book</a></li>
+             <li><a href="loginfaq.html">FAQ</a></li>
              <li><a href="sign_up.php">Sign Up</a></li>
              <li><a href="log_in.html">Log In</a></li>
       </ul>
