--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
-      <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
+      <script>$( document ).ready(function(){$(".dropdown-button").dropdown();})</script>
       <script> $(document).ready(function(){ $('.collapsible').collapsible();});</script>
         <!--Navbar Start"-->
     <ul id="dropdown1" class="dropdown-content">
