--- a/loginbooking.html
+++ b/loginbooking.html
@@ -44,16 +44,18 @@
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="loginbooking.html">Book</a></li>
             <li><a href="loginfaq.html">FAQ</a></li>
-            <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.php">Log In</a></li>
+            <li><a href="chatroom.php">Support</a></li>
+             <li><a href="profile.php">Profile</a></li>
+             <li><a href="log_out.php">Log out</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services<i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="loginbooking.html">Book</a></li>
              <li><a href="loginfaq.html">FAQ</a></li>
-             <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.php">Log In</a></li>
+             <li><a href="chatroom.php">Support</a></li>
+             <li><a href="profile.php">Profile</a></li>
+             <li><a href="log_out.php">Log out</a></li>
       </ul>
     </div>
   </nav>
