--- a/loginbus_services.html
+++ b/loginbus_services.html
@@ -37,23 +37,25 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="loginindexpage.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
+      <a href="loginindexpage.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="loginbooking.html">Book</a></li>
             <li><a href="loginfaq.html">FAQ</a></li>
-            <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.html">Log In</a></li>
+            <li><a href="chatroom.php">Support</a></li>
+             <li><a href="profile.php">Profile</a></li>
+             <li><a href="log_out.php">Log out</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="loginbooking.html">Book</a></li>
              <li><a href="loginfaq.html">FAQ</a></li>
-             <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.html">Log In</a></li>
+             <li><a href="chatroom.php">Support</a></li>
+             <li><a href="profile.php">Profile</a></li>
+             <li><a href="log_out.php">Log out</a></li>
       </ul>
     </div>
   </nav>
