--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script> $(document).ready(function(){$('.parallax').parallax();});</script>
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
-      <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
+      <script>$( document ).ready(function(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
    <ul id="dropdown1" class="dropdown-content">
         <li><a href="bus_services.html">Bus</a></li>
