--- a/loginfaq.html
+++ b/loginfaq.html
@@ -18,7 +18,7 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
-      <script>$( document ).ready(function(){$(".dropdown-button").dropdown();})</script>
+      <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
       <script> $(document).ready(function(){ $('.collapsible').collapsible();});</script>
         <!--Navbar Start"-->
     <ul id="dropdown1" class="dropdown-content">
@@ -37,25 +37,23 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="loginindexpage.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
+      <a href="loginindexabout.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="about.html">About</a></li>
+            <li><a href="loginabout.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="loginbooking.html">Book</a></li>
             <li><a href="loginfaq.html">FAQ</a></li>
-            <li><a href="chatroom.php">Support</a></li>
-             <li><a href="profile.php">Profile</a></li>
-             <li><a href="log_out.php">Log out</a></li>
+            <li><a href="sign_up.php">Sign Up</a></li>
+             <li><a href="log_in.php">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
-             <li><a href="loginbooking.html">Book</a></li>
-             <li><a href="loginfaq.html">FAQ</a></li>
-             <li><a href="chatroom.php">Support</a></li>
-             <li><a href="profile.php">Profile</a></li>
-             <li><a href="log_out.php">Log out</a></li>
+             <li><a href="booking.html">Book</a></li>
+             <li><a href="faq.html">FAQ</a></li>
+             <li><a href="sign_up.php">Sign Up</a></li>
+             <li><a href="log_in.php">Log In</a></li>
       </ul>
     </div>
   </nav>
@@ -108,7 +106,6 @@
       <div class="collapsible-body"><span>They cannot at the moment but it may be implemented in the future.</span></div>
     </li>
      </ul>
-               
 
 
         </div>
