--- a/loginfaq.html
+++ b/loginfaq.html
@@ -37,7 +37,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="loginindexabout.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
+      <a href="loginindexpage.php" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="loginabout.html">About</a></li>
